--- a/checker/Makefile
+++ b/checker/Makefile
@@ -3,7 +3,8 @@ all: rnachecker
 CXXFLAGS=-O2
 
 rnachecker: checking.o main.o gbk_reader.o answer_reader.o
-	c++ -o rnachecker checking.o main.o gbk_reader.o answer_reader.o
+	mkdir -p ../bin-cpp
+	c++ -o ../bin-cpp/rnachecker checking.o main.o gbk_reader.o answer_reader.o
     
 checking.o: checking.cpp checking.h
 	c++ -c ${CXXFLAGS} checking.cpp
